@@ -79,22 +79,13 @@ struct _Eet_Node
    } data;
 };
 
-/**
+/*
  * variable and macros used for the eina_log module
  */
 extern int _eet_log_dom_global;
 
-#ifdef EET_DEFAULT_MODULE_LOG_DOMAIN
-#undef EET_DEFAULT_MODULE_LOG_DOMAIN _eet_log_dom_global
-#endif
-
-/**
- * the default module log domain is the eet log domain
- */
-
-#define EET_DEFAULT_MODULE_LOG_DOMAIN _eet_log_dom_global
-
-/* Macros that are used everywhere
+/*
+ * Macros that are used everywhere
  *
  * the first four macros are the general macros for the lib
  */
@@ -102,56 +93,26 @@ extern int _eet_log_dom_global;
 #undef EET_DEFAULT_LOG_COLOR
 #endif
 #define EET_DEFAULT_LOG_COLOR EINA_COLOR_CYAN
-#ifdef ERROR
-#undef ERROR
-#endif
-#define ERROR(...) EINA_LOG_DOM_ERR(_eet_log_dom_global, __VA_ARGS__)
-#ifdef DEBUG
-#undef DEBUG
-#endif
-#define DEBUG(...) EINA_LOG_DOM_DBG(_eet_log_dom_global, __VA_ARGS__)
-#ifdef INFO
-#undef INFO
-#endif
-#define INFO(...) EINA_LOG_DOM_INFO(_eet_log_dom_global, __VA_ARGS__)
-#ifdef WARN
-#undef WARN
-#endif
-#define WARN(...) EINA_LOG_DOM_WARN(_eet_log_dom_global, __VA_ARGS__)
-#ifdef CRITICAL
-#undef CRITICAL
-#endif
-#define CRITICAL(...) EINA_LOG_DOM_CRIT(_eet_log_dom_global, __VA_ARGS__)
-/**
- * macros that are used all around the code for message processing
- * four macros are defined ERR, WRN, DGB, INF.
- * EFREET_MODULE_LOG_DOM should be defined individually for each module
- */
-
-#ifdef _EET_MODULE_LOG_DOM
-#undef _EET_MODULE_LOG_DOM
-#endif
-#define _EET_MODULE_LOG_DOM _eet_log_dom_global /*default log domain for each module. It can redefined inside each module */
 #ifdef ERR
 #undef ERR
 #endif
-#define ERR(...) EINA_LOG_DOM_ERR(_EET_MODULE_LOG_DOM, __VA_ARGS__)
+#define ERR(...) EINA_LOG_DOM_ERR(_eet_log_dom_global, __VA_ARGS__)
 #ifdef DBG
 #undef DBG
 #endif
-#define DBG(...) EINA_LOG_DOM_DBG(_EET_MODULE_LOG_DOM, __VA_ARGS__)
+#define DBG(...) EINA_LOG_DOM_DBG(_eet_log_dom_global, __VA_ARGS__)
 #ifdef INF
 #undef INF
 #endif
-#define INF(...) EINA_LOG_DOM_INFO(_EET_MODULE_LOG_DOM, __VA_ARGS__)
+#define INF(...) EINA_LOG_DOM_INFO(_eet_log_dom_global, __VA_ARGS__)
 #ifdef WRN
 #undef WRN
 #endif
-#define WRN(...) EINA_LOG_DOM_WARN(_EET_MODULE_LOG_DOM, __VA_ARGS__)
+#define WRN(...) EINA_LOG_DOM_WARN(_eet_log_dom_global, __VA_ARGS__)
 #ifdef CRIT
 #undef CRIT
 #endif
-#define CRIT(...) EINA_LOG_DOM_CRIT(_EET_MODULE_LOG_DOM, __VA_ARGS__)
+#define CRIT(...) EINA_LOG_DOM_CRIT(_eet_log_dom_global, __VA_ARGS__)
 
 Eet_Dictionary  *eet_dictionary_add(void);
 void             eet_dictionary_free(Eet_Dictionary *ed);
